XMLtoCSV/objects/unpackaged/objects/Unsubscribe_Product_vod__c.object
<CustomObject>
    <description>Unsubscribe_Product_vod object stores the information on how and what details of a product are displayed on the unsubscribe page when the associated Unsubscribe_vod record is referenced.</description>
    <fields>
        <fullName>Content_Type_Display_Name_vod__c</fullName>
        <description>Content_Type_Display_Name_vod is the text that will be used to display an alternate name instead of the default Content_Type_vod.Name field for the associated Product.</description>
        <label>Content Type Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Content_Type_vod record for which consent is captured.</description>
        <label>Content Type</label>
        <referenceTo>Content_Type_vod__c</referenceTo>
        <relationshipLabel>Unsubscribe Products</relationshipLabel>
        <relationshipName>Unsubscribe_Product_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detail_Group_Display_vod__c</fullName>
        <description>Detail_Group_Display_vod is the text that will be used to display an alternate name instead of the default Product.Name field for the associated Detail Group.</description>
        <label>Detail Group Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail_Group_vod represents the product to which this Unsubscribe_Product_vod record is associated.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Unsubscribe Detail Groups</relationshipLabel>
        <relationshipName>Unsubscribe_DetailGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order_vod__c</fullName>
        <description>The order in which the products will be displayed in on the unsubscribe page.</description>
        <label>Display Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Display_vod__c</fullName>
        <description>Product_Display_vod is the text that will be used to display an alternate name instead of the default Product.Name field for the associated Product.</description>
        <label>Product Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product_vod represents the product to which this Unsubscribe_Product_vod record is associated.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Unsubscribe Products</relationshipLabel>
        <relationshipName>Unsubscribe_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unsubscribe_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unsubscribe_vod represents the Unsubscribe_vod record to which this Email_Activity_vod record is associated.</description>
        <label>Unsubscribe</label>
        <referenceTo>Unsubscribe_vod__c</referenceTo>
        <relationshipLabel>Unsubscribe Products</relationshipLabel>
        <relationshipName>Unsubscribe_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unsubscribe Product</label>
    <nameField>
        <label>Unsubscribe Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unsubscribe Products</pluralLabel>
    <recordTypes>
        <fullName>Approved_Email_Content_Type_Unsubscribe_vod</fullName>
        <active>true</active>
        <description>recordtype of those Unsubscribe_Product_vod records that will be used store information about a Content Type to be used for Approved Email Unsubscribe page</description>
        <label>Approved_Email_Content_Type_Unsubscribe_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approved_Email_Unsubscribe_vod</fullName>
        <active>true</active>
        <description>Record type of those Unsubscribe_Product_vod records that will be used store information about a product to be used for Approved Email Unsubscribe page</description>
        <label>Approved_Email_Unsubscribe_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>